--- a/war/src/main/webapp/index.xhtml
+++ b/war/src/main/webapp/index.xhtml
@@ -5,7 +5,11 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-<f:view>
-    <h:outputLabel value="Hello, world"/>
-</f:view>
+<head>
+    <title>JSF Tutorial!</title>
+</head>
+
+<body>
+#{helloWorld.getMessage()}
+</body>
 </html>
